2024-08-15  Ulrich Müller  <ulm@gentoo.org>

	* keyword-generation.sh (OBSOLETE): Update.

	* Makefile (DISTFILES): Add Makefile.

2024-08-10  Ulrich Müller  <ulm@gentoo.org>

	* ebuild-mode.el (ebuild-mode-find-build-log): New function.
	(ebuild-mode-map, ebuild-mode-menu): Keybinding and menu entry.
	* ebuild-mode.texi (ebuild-mode): Document it.

	* test/ebuild-mode-tests.el
	(ebuild-mode-test-run-with-fixed-time): New macro.
	(ebuild-mode-test-update-copyright)
	(ebuild-mode-test-insert-tag-line): Use it.
	* test/glep-mode-tests.el
	(glep-mode-test-run-with-fixed-time): New macro.
	(glep-mode-test-update-last-modified): Use it.

	* ebuild-mode.el (find-file-hook): Use 'if' because 'static-if'
	breaks autoloads.

2024-08-08  Ulrich Müller  <ulm@gentoo.org>

	* ebuild-mode.el (ebuild-mode-insert-tag-line): Don't insert
	another space when comment-start ends with a space or tab.

	* test/ebuild-mode-tests.el:
	* test/glep-mode-tests.el: New files, introducing tests.
	* ebuild-mode.el (ebuild-mode-collect-and-split): Make it visible
	at load time for tests.
	* Makefile (TESTS, BYTECOMPFLAGS): New variables.
	(check): New target.

2024-08-07  Ulrich Müller  <ulm@gentoo.org>

	* ebuild-mode.el (ebuild-mode-unescape-string): New function,
	decodes backslash and ANSI-C escape sequences in strings.
	(ebuild-mode-find-s): Call it.

	* ebuild-mode.el (ebuild-mode-get-builddir): New function, split
	off from ebuild-mode-find-workdir.
	(ebuild-mode-find-s): New function.
	(ebuild-mode-map, ebuild-mode-menu): Keybinding and menu entry.
	* ebuild-mode.texi (ebuild-mode): Document ebuild-mode-find-s.

	* ebuild-mode.el (ebuild-mode-find-workdir): Let-bind
	find-file-run-dired to t.

2024-08-05  Ulrich Müller  <ulm@gentoo.org>

	* ebuild-mode.el (ebuild-mode-map): Keybindings now use C-c C-e
	as their prefix.
	* ebuild-mode.texi (ebuild-mode): Document the new keybindings.

	* ebuild-mode.el (ebuild-mode, ebuild-run-command)