@@ -1,5 +1,8 @@
 2024-08-15  Ulrich Müller  <ulm@gentoo.org>
 
+	* ebuild-mode-keywords.el (ebuild-mode-keywords-eclass):
+	Regenerated.
+
 	* keyword-generation.sh (OBSOLETE): Update.
 
 	* Makefile (DISTFILES): Add Makefile.
